style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

:root {
     font-size: 100%;
    --maincolor: #181818;
    --lightcolor: white;
    --article1: #FF2F00;
    --article2: #3631FB;
    --article3: #EB51FF;
    --padding: 1rem;
    --lineheight: 100%
}

h1 {
    font-size: 5rem;
    line-height: calc(var(--lineheight)*0.8);

    @media (width > 950px) {
        padding-inline: calc(var(--padding)*6);
        max-width: 15ch;
        font-size: 8rem;
        padding-block-start: calc(var(--padding)*10);
    }
    @media (width > 1200px) {
        margin-inline-start: calc(var(--padding)*10);  
    }
}

h2 {
    font-size: 2.5rem;
    border-style: none;
    color: var(--lightcolor);
    
    @media (width > 600px) {
        padding-inline: var(--padding);
    }
    
    @media (width > 1200px) {
        margin-inline-start: 0
    }

}

h3 {
    font-size: 1.5rem;
    line-height: 90%;
    text-transform: uppercase;
    color: var(--maincolor);
    padding-inline: 1rem;
    padding-block-end: 1rem;
    font-weight: 400;
    color: var(--lightcolor);
}


.first {
    background-color: var(--article1);
}
.second {
    background-color: var(--article2);
}
.third {
    background-color: var(--article3);
}

p {
    padding-inline: var(--padding);
    color: var(--maincolor);
    @media (width > 1200px) {
        margin-inline-start: 0
    }
}

.together {
     padding-block: calc(var(--padding)*4);

    @media (width > 950px) {
        padding: calc(var(--padding)*6);
    }
    @media (width > 1200px) {
        margin-inline-start: calc(var(--padding)*10);  
    }

}


footer {
    padding-block: calc(var(--padding)*6);
    text-transform: uppercase;
    font-weight: 700;
    border-block: none;
    p {
        padding-block: calc(var(--padding)*0.5);
        font-size: 1.5rem;
    }

    @media (width>950px) {
        display: flex;
        flex-direction: row;
        justify-content: center;
    }
}

/* img {
    width:20%;
} */

li {
    p {
        text-align: left;
        padding-block: var(--padding);
        color: var(--lightcolor);
        font-size: 1.2rem;
    }
}

section ol {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    /* gap: 1rem; */
    justify-content: center;
    padding-block: 3rem;

    list-style-position: inside;
    counter-reset: index;

	> li::before {
		content: counters(index, '.') '.';
		counter-increment: index;
	}

     /* this makes it become a row */
    @media (width > 950px) {
        flex-direction: row;
        flex-wrap: nowrap;
        
    }
}

/* sometimes this hovers the whole block - sometimes it hovers each element need to fix */
/* need to add links too */
.articles {

    @media (width > 950px) {
        :hover {
        scale: 105%;
        }
    }

}

section ol li {
    flex-grow: 1;
    padding: 2rem;
}


section ol li::before {
    font-family: "Poppins", sans-serif;
    font-weight: 700;
    font-size: 2rem;
    padding: var(--padding);
    color: var(--lightcolor);
}

section ol li:first-child {
        background-color: var(--article1);  
}

section ol li:nth-child(2) {
        background-color: var(--article2);  
}

section ol li:last-child {
       background-color: var(--article3);  
}

line {
    position: absolute;
    z-index: -1;
}

.line1 {
    stroke: var(--article1);
    stroke-width: 5rem;
    z-index: -1;
}

.line2 {
    stroke: var(--article2);
    stroke-width: 5rem;
}

.line3 {
    stroke: var(--article3);
    stroke-width: 5rem;
}

/* tried color in the h1 - not sure yet */
/* span:first-child {
    color: var(--article1);
}

span:nth-child(2) {
    color: var(--article2);
}

span:last-child {
    color: var(--article3);
} */

span {
    color: var(--maincolor);
}


/* added an image I wanted it to rotate as the screen changes so it fits the width better */
/* img {
    position: absolute;
    z-index: -1;
    width: 100%;
    rotate: 90deg;
    scale: 150%;
    /* filter: blur(5px); */
    /* @media (width > 950px) {
        rotate: 0deg;
        scale: 100%;

    }
} */ 

/* targeting last h2 in list so they are all on two lines each */
.articles li:last-child h2 {
    max-width: 12ch;
}

a { 
    text-decoration: none;
}

/* svg {
    position: absolute;
    z-index: -1;
    scale: 50%;
} */

.svg {
    position: absolute;
    z-index: -1;
    width: 100%;
    rotate: 90deg;
    scale: 150%;
    margin-block-end: 3rem;

    @media (width > 500px) {
        scale: 100%;
    }
    @media (width > 720px) {
        rotate: 0deg;
        scale: 100%;
    }
}

/* need to add down arrow + fix the default styles*/
.colophon {
    font-size: 3.2rem;
    font-weight: 700;
    line-height: calc(var(--lineheight)*0.9);
    text-transform: uppercase;
    color: var(--lightcolor);
    padding-block: var(--padding);
    padding-inline: var(--padding);
    background-color: var(--maincolor);

    @media (width > 600px) {
        font-size: 4rem; 
        padding-block: calc(var(--padding)*2);
        padding-inline: calc(var(--padding)*2);
    }

    @media (width > 950px) {
        font-size: 6rem; 
        padding-inline: calc(var(--padding)*4);
    }
    @media (width > 1200px) {
        margin-inline-start: calc(var(--padding)*20);  
    }
}

.colophon::after {
    content: ">";
    transform: rotate(90deg);
    display: inline-block;
}

.open {
    padding-block-start: calc(var(--padding)*4);

    @media (width > 600px) {
        font-size: 1.2rem;
        padding-inline: calc(var(--padding)*2);
        max-width: 75ch;
    }
    @media (width > 950px) {
        padding-inline: calc(var(--padding)*4);   
    }

    @media (width > 1200px) {
        margin-inline-start: calc(var(--padding)*20);  
    }
}

